--- a/Profile_Card_01.html
+++ b/Profile_Card_01.html
@@ -31,9 +31,9 @@
                 <a href="mailto:cruzerojorge@gmail.com"><button>Mi Correo</button></a>
             </div>
             <div class="IconLink">
-                <img src="FOTO/ICON-02 (1).png" alt="Linkedin">
-                <img src="FOTO/ICON-03 (1).png" alt="Github">
-                <img src="FOTO/ICON_Mesa de trabajo 1 (1).png" alt="Instagram">
+                <a href="www.linkedin.com/in/jorge-cruz-602631237/"><img src="FOTO/ICON-02 (1).png" alt="Linkedin"></a>
+                <a href="https://github.com/Jorge1452"><img src="FOTO/ICON-03 (1).png" alt="Github"></a>
+                <a href="https://www.instagram.com/jorge.garabato/"><img src="FOTO/ICON_Mesa de trabajo 1 (1).png" alt="Instagram"></a>
             </div>
         </div>
     </table>
